--- a/app/src/main/res/layout/img_cell.xml
+++ b/app/src/main/res/layout/img_cell.xml
@@ -5,5 +5,7 @@
     <ImageView
         android:id="@+id/img_cell"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:transitionName="transition1"
+        />
 </FrameLayout>
